--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
                 <version>5.6.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.8</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
