--- a/publisher/pom.xml
+++ b/publisher/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>amqp-client</artifactId>
             <version>5.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
